--- a/info.html
+++ b/info.html
@@ -25,7 +25,7 @@
             <br> <br>
             They are member of <a href="https://extratonal.org/">the Platform for Extratonality</a> that organises workshops and events around dissident sound making and founding member of the inter-dependent publishing project <a href="https://blobshopcollective.org/">Blob Shop Collective</a>
             They are founding member of the bottom up sound school <a href='https://klankschool.org/'>Klankschool</a> that is currently being imagined and developed by Rotterdam locals, artists, musicians, technicians, theorists and sound lovers.
-            They make exporatory music and sound performances as mitsitron and as part of the sound projects het band, Post-talk, (S)low Frequencies.
+            They make exploratory music and sound performances as mitsitron and as part of the sound projects Post-talk, (S)low Frequencies, het band.
 
         </p>
 
