--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </a>
           </li>
           <li>
-            <a href="/platform_for_extratonality.html">
-            production
+            <a href="/production.html">
+           cultural production
             </a>
           </li>
           <li>
